// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tool Schema Snapshots > Tool: pixoo_compose > inputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "description": "Compose a scene from layered elements and push to the Pixoo device.",
  "properties": {
    "background": {
      "default": "black",
      "description": "Canvas fill color before drawing elements. Default: 'black'.",
      "type": "string",
    },
    "elements": {
      "description": "Ordered list of elements to draw (back-to-front).",
      "items": {
        "description": "A visual element to compose onto the canvas.",
        "oneOf": [
          {
            "additionalProperties": false,
            "properties": {
              "animate": {
                "additionalProperties": {
                  "description": "Array of [frame, value] keyframe pairs.",
                  "items": {
                    "items": [
                      {
                        "maximum": 9007199254740991,
                        "minimum": 0,
                        "type": "integer",
                      },
                      {
                        "anyOf": [
                          {
                            "type": "number",
                          },
                          {
                            "type": "string",
                          },
                          {
                            "type": "boolean",
                          },
                        ],
                      },
                    ],
                    "type": "array",
                  },
                  "type": "array",
                },
                "description": "Animate element properties across frames. Keys are property names, values are keyframe arrays. Numbers interpolate linearly, colors lerp, booleans snap.",
                "propertyNames": {
                  "type": "string",
                },
                "type": "object",
              },
              "centered": {
                "default": false,
                "description": "Center text horizontally on canvas (ignores x).",
                "type": "boolean",
              },
              "color": {
                "default": "white",
                "description": "Text color (hex or named).",
                "type": "string",
              },
              "font": {
                "default": "standard",
                "description": "Bitmap font: 'standard' (5x7) or 'compact' (3x5).",
                "enum": [
                  "standard",
                  "compact",
                ],
                "type": "string",
              },
              "scale": {
                "default": 1,
                "description": "Pixel scale factor.",
                "maximum": 9007199254740991,
                "minimum": 1,
                "type": "integer",
              },
              "text": {
                "description": "Text to render.",
                "type": "string",
              },
              "type": {
                "const": "text",
                "type": "string",
              },
              "visible": {
                "default": true,
                "description": "Whether to render this element.",
                "type": "boolean",
              },
              "x": {
                "default": 0,
                "description": "X position.",
                "maximum": 9007199254740991,
                "minimum": -9007199254740991,
                "type": "integer",
              },
              "y": {
                "default": 0,
                "description": "Y position.",
                "maximum": 9007199254740991,
                "minimum": -9007199254740991,
                "type": "integer",
              },
            },
            "required": [
              "type",
              "text",
              "x",
              "y",
              "color",
              "font",
              "scale",
              "centered",
              "visible",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "animate": {
                "additionalProperties": {
                  "description": "Array of [frame, value] keyframe pairs.",
                  "items": {
                    "items": [
                      {
                        "maximum": 9007199254740991,
                        "minimum": 0,
                        "type": "integer",
                      },
                      {
                        "anyOf": [
                          {
                            "type": "number",
                          },
                          {
                            "type": "string",
                          },
                          {
                            "type": "boolean",
                          },
                        ],
                      },
                    ],
                    "type": "array",
                  },
                  "type": "array",
                },
                "description": "Animate element properties across frames. Keys are property names, values are keyframe arrays. Numbers interpolate linearly, colors lerp, booleans snap.",
                "propertyNames": {
                  "type": "string",
                },
                "type": "object",
              },
              "fit": {
                "default": "contain",
                "description": "Resize mode.",
                "enum": [
                  "contain",
                  "cover",
                  "fill",
                ],
                "type": "string",
              },
              "height": {
                "description": "Target height. Defaults to canvas size.",
                "maximum": 9007199254740991,
                "minimum": 1,
                "type": "integer",
              },
              "kernel": {
                "default": "nearest",
                "description": "Interpolation kernel.",
                "enum": [
                  "nearest",
                  "lanczos3",
                  "mitchell",
                ],
                "type": "string",
              },
              "path": {
                "description": "Absolute path to image file.",
                "minLength": 1,
                "type": "string",
              },
              "type": {
                "const": "image",
                "type": "string",
              },
              "visible": {
                "default": true,
                "description": "Whether to render this element.",
                "type": "boolean",
              },
              "width": {
                "description": "Target width. Defaults to canvas size.",
                "maximum": 9007199254740991,
                "minimum": 1,
                "type": "integer",
              },
              "x": {
                "default": 0,
                "description": "X offset on canvas.",
                "maximum": 9007199254740991,
                "minimum": -9007199254740991,
                "type": "integer",
              },
              "y": {
                "default": 0,
                "description": "Y offset on canvas.",
                "maximum": 9007199254740991,
                "minimum": -9007199254740991,
                "type": "integer",
              },
            },
            "required": [
              "type",
              "path",
              "x",
              "y",
              "fit",
              "kernel",
              "visible",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "animate": {
                "additionalProperties": {
                  "description": "Array of [frame, value] keyframe pairs.",
                  "items": {
                    "items": [
                      {
                        "maximum": 9007199254740991,
                        "minimum": 0,
                        "type": "integer",
                      },
                      {
                        "anyOf": [
                          {
                            "type": "number",
                          },
                          {
                            "type": "string",
                          },
                          {
                            "type": "boolean",
                          },
                        ],
                      },
                    ],
                    "type": "array",
                  },
                  "type": "array",
                },
                "description": "Animate element properties across frames. Keys are property names, values are keyframe arrays. Numbers interpolate linearly, colors lerp, booleans snap.",
                "propertyNames": {
                  "type": "string",
                },
                "type": "object",
              },
              "bodyColor": {
                "description": "Override body color (hex or named).",
                "type": "string",
              },
              "cols": {
                "description": "Number of columns in the sprite grid.",
                "maximum": 9007199254740991,
                "minimum": 1,
                "type": "integer",
              },
              "darkColor": {
                "description": "Override dark/eye color (hex or named).",
                "type": "string",
              },
              "path": {
                "description": "Absolute path to sprite sheet PNG.",
                "minLength": 1,
                "type": "string",
              },
              "rows": {
                "description": "Number of rows in the sprite grid.",
                "maximum": 9007199254740991,
                "minimum": 1,
                "type": "integer",
              },
              "scale": {
                "description": "Pixel scale factor.",
                "maximum": 9007199254740991,
                "minimum": 1,
                "type": "integer",
              },
              "type": {
                "const": "sprite",
                "type": "string",
              },
              "visible": {
                "default": true,
                "description": "Whether to render this element.",
                "type": "boolean",
              },
              "x": {
                "description": "X offset (default: centered).",
                "maximum": 9007199254740991,
                "minimum": -9007199254740991,
                "type": "integer",
              },
              "y": {
                "default": 0,
                "description": "Y offset.",
                "maximum": 9007199254740991,
                "minimum": -9007199254740991,
                "type": "integer",
              },
            },
            "required": [
              "type",
              "path",
              "cols",
              "rows",
              "y",
              "visible",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "animate": {
                "additionalProperties": {
                  "description": "Array of [frame, value] keyframe pairs.",
                  "items": {
                    "items": [
                      {
                        "maximum": 9007199254740991,
                        "minimum": 0,
                        "type": "integer",
                      },
                      {
                        "anyOf": [
                          {
                            "type": "number",
                          },
                          {
                            "type": "string",
                          },
                          {
                            "type": "boolean",
                          },
                        ],
                      },
                    ],
                    "type": "array",
                  },
                  "type": "array",
                },
                "description": "Animate element properties across frames. Keys are property names, values are keyframe arrays. Numbers interpolate linearly, colors lerp, booleans snap.",
                "propertyNames": {
                  "type": "string",
                },
                "type": "object",
              },
              "color": {
                "default": "white",
                "description": "Color.",
                "type": "string",
              },
              "fill": {
                "default": true,
                "description": "Filled (true) or stroked (false).",
                "type": "boolean",
              },
              "h": {
                "description": "Height.",
                "maximum": 9007199254740991,
                "minimum": 1,
                "type": "integer",
              },
              "type": {
                "const": "rect",
                "type": "string",
              },
              "visible": {
                "default": true,
                "description": "Whether to render this element.",
                "type": "boolean",
              },
              "w": {
                "description": "Width.",
                "maximum": 9007199254740991,
                "minimum": 1,
                "type": "integer",
              },
              "x": {
                "description": "X position.",
                "maximum": 9007199254740991,
                "minimum": -9007199254740991,
                "type": "integer",
              },
              "y": {
                "description": "Y position.",
                "maximum": 9007199254740991,
                "minimum": -9007199254740991,
                "type": "integer",
              },
            },
            "required": [
              "type",
              "x",
              "y",
              "w",
              "h",
              "color",
              "fill",
              "visible",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "animate": {
                "additionalProperties": {
                  "description": "Array of [frame, value] keyframe pairs.",
                  "items": {
                    "items": [
                      {
                        "maximum": 9007199254740991,
                        "minimum": 0,
                        "type": "integer",
                      },
                      {
                        "anyOf": [
                          {
                            "type": "number",
                          },
                          {
                            "type": "string",
                          },
                          {
                            "type": "boolean",
                          },
                        ],
                      },
                    ],
                    "type": "array",
                  },
                  "type": "array",
                },
                "description": "Animate element properties across frames. Keys are property names, values are keyframe arrays. Numbers interpolate linearly, colors lerp, booleans snap.",
                "propertyNames": {
                  "type": "string",
                },
                "type": "object",
              },
              "color": {
                "default": "white",
                "description": "Color.",
                "type": "string",
              },
              "cx": {
                "description": "Center X.",
                "maximum": 9007199254740991,
                "minimum": -9007199254740991,
                "type": "integer",
              },
              "cy": {
                "description": "Center Y.",
                "maximum": 9007199254740991,
                "minimum": -9007199254740991,
                "type": "integer",
              },
              "fill": {
                "default": true,
                "description": "Filled (true) or stroked (false).",
                "type": "boolean",
              },
              "radius": {
                "description": "Radius.",
                "maximum": 9007199254740991,
                "minimum": 1,
                "type": "integer",
              },
              "type": {
                "const": "circle",
                "type": "string",
              },
              "visible": {
                "default": true,
                "description": "Whether to render this element.",
                "type": "boolean",
              },
            },
            "required": [
              "type",
              "cx",
              "cy",
              "radius",
              "color",
              "fill",
              "visible",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "animate": {
                "additionalProperties": {
                  "description": "Array of [frame, value] keyframe pairs.",
                  "items": {
                    "items": [
                      {
                        "maximum": 9007199254740991,
                        "minimum": 0,
                        "type": "integer",
                      },
                      {
                        "anyOf": [
                          {
                            "type": "number",
                          },
                          {
                            "type": "string",
                          },
                          {
                            "type": "boolean",
                          },
                        ],
                      },
                    ],
                    "type": "array",
                  },
                  "type": "array",
                },
                "description": "Animate element properties across frames. Keys are property names, values are keyframe arrays. Numbers interpolate linearly, colors lerp, booleans snap.",
                "propertyNames": {
                  "type": "string",
                },
                "type": "object",
              },
              "color": {
                "default": "white",
                "description": "Color.",
                "type": "string",
              },
              "type": {
                "const": "line",
                "type": "string",
              },
              "visible": {
                "default": true,
                "description": "Whether to render this element.",
                "type": "boolean",
              },
              "x0": {
                "description": "Start X.",
                "maximum": 9007199254740991,
                "minimum": -9007199254740991,
                "type": "integer",
              },
              "x1": {
                "description": "End X.",
                "maximum": 9007199254740991,
                "minimum": -9007199254740991,
                "type": "integer",
              },
              "y0": {
                "description": "Start Y.",
                "maximum": 9007199254740991,
                "minimum": -9007199254740991,
                "type": "integer",
              },
              "y1": {
                "description": "End Y.",
                "maximum": 9007199254740991,
                "minimum": -9007199254740991,
                "type": "integer",
              },
            },
            "required": [
              "type",
              "x0",
              "y0",
              "x1",
              "y1",
              "color",
              "visible",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "animate": {
                "additionalProperties": {
                  "description": "Array of [frame, value] keyframe pairs.",
                  "items": {
                    "items": [
                      {
                        "maximum": 9007199254740991,
                        "minimum": 0,
                        "type": "integer",
                      },
                      {
                        "anyOf": [
                          {
                            "type": "number",
                          },
                          {
                            "type": "string",
                          },
                          {
                            "type": "boolean",
                          },
                        ],
                      },
                    ],
                    "type": "array",
                  },
                  "type": "array",
                },
                "description": "Animate element properties across frames. Keys are property names, values are keyframe arrays. Numbers interpolate linearly, colors lerp, booleans snap.",
                "propertyNames": {
                  "type": "string",
                },
                "type": "object",
              },
              "data": {
                "description": "Row strings. Each character is a palette index (0–9, a–z).",
                "items": {
                  "type": "string",
                },
                "minItems": 1,
                "type": "array",
              },
              "palette": {
                "description": "Color palette. Index 0 = first char in row strings. Empty string = transparent.",
                "items": {
                  "type": "string",
                },
                "minItems": 1,
                "type": "array",
              },
              "scale": {
                "default": 1,
                "description": "Pixel scale multiplier.",
                "maximum": 9007199254740991,
                "minimum": 1,
                "type": "integer",
              },
              "type": {
                "const": "bitmap",
                "type": "string",
              },
              "visible": {
                "default": true,
                "description": "Whether to render this element.",
                "type": "boolean",
              },
              "x": {
                "default": 0,
                "description": "X offset.",
                "maximum": 9007199254740991,
                "minimum": -9007199254740991,
                "type": "integer",
              },
              "y": {
                "default": 0,
                "description": "Y offset.",
                "maximum": 9007199254740991,
                "minimum": -9007199254740991,
                "type": "integer",
              },
            },
            "required": [
              "type",
              "x",
              "y",
              "palette",
              "data",
              "scale",
              "visible",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "animate": {
                "additionalProperties": {
                  "description": "Array of [frame, value] keyframe pairs.",
                  "items": {
                    "items": [
                      {
                        "maximum": 9007199254740991,
                        "minimum": 0,
                        "type": "integer",
                      },
                      {
                        "anyOf": [
                          {
                            "type": "number",
                          },
                          {
                            "type": "string",
                          },
                          {
                            "type": "boolean",
                          },
                        ],
                      },
                    ],
                    "type": "array",
                  },
                  "type": "array",
                },
                "description": "Animate element properties across frames. Keys are property names, values are keyframe arrays. Numbers interpolate linearly, colors lerp, booleans snap.",
                "propertyNames": {
                  "type": "string",
                },
                "type": "object",
              },
              "data": {
                "description": "Array of individual pixels to set.",
                "items": {
                  "additionalProperties": false,
                  "properties": {
                    "color": {
                      "description": "Pixel color.",
                      "type": "string",
                    },
                    "x": {
                      "description": "Pixel X.",
                      "maximum": 9007199254740991,
                      "minimum": -9007199254740991,
                      "type": "integer",
                    },
                    "y": {
                      "description": "Pixel Y.",
                      "maximum": 9007199254740991,
                      "minimum": -9007199254740991,
                      "type": "integer",
                    },
                  },
                  "required": [
                    "x",
                    "y",
                    "color",
                  ],
                  "type": "object",
                },
                "minItems": 1,
                "type": "array",
              },
              "type": {
                "const": "pixels",
                "type": "string",
              },
              "visible": {
                "default": true,
                "description": "Whether to render this element.",
                "type": "boolean",
              },
            },
            "required": [
              "type",
              "data",
              "visible",
            ],
            "type": "object",
          },
        ],
      },
      "minItems": 1,
      "type": "array",
    },
    "frames": {
      "default": 1,
      "description": "Frame count for animation (1 = static). Max 40.",
      "maximum": 40,
      "minimum": 1,
      "type": "integer",
    },
    "output": {
      "description": "Absolute path to save a preview PNG. If omitted, no preview is saved.",
      "type": "string",
    },
    "push": {
      "default": true,
      "description": "Push to device. Set false to only save a preview PNG.",
      "type": "boolean",
    },
    "speed": {
      "default": 150,
      "description": "Animation frame duration in ms.",
      "maximum": 9007199254740991,
      "minimum": 10,
      "type": "integer",
    },
  },
  "required": [
    "background",
    "elements",
    "frames",
    "speed",
    "push",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pixoo_compose > outputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "description": "Result of the compose operation.",
  "properties": {
    "frames": {
      "description": "Number of frames rendered.",
      "type": "number",
    },
    "outputFiles": {
      "description": "Paths of saved preview PNGs.",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "pushed": {
      "description": "Whether the result was pushed to the device.",
      "type": "boolean",
    },
  },
  "required": [
    "frames",
    "pushed",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pixoo_control > inputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "description": "Read or change Pixoo device settings.",
  "properties": {
    "brightness": {
      "description": "Display brightness (0–100).",
      "maximum": 100,
      "minimum": 0,
      "type": "integer",
    },
    "channel": {
      "description": "Active channel ('faces' | 'cloud' | 'visualizer' | 'custom').",
      "enum": [
        "faces",
        "cloud",
        "visualizer",
        "custom",
      ],
      "type": "string",
    },
    "clock_face_id": {
      "description": "Clock face ID (only applies on faces channel).",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
    "screen": {
      "description": "Turn display on or off ('on' | 'off').",
      "enum": [
        "on",
        "off",
      ],
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pixoo_control > outputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "description": "Current device config after applying any changes.",
  "properties": {
    "applied": {
      "description": "List of settings that were changed.",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "brightness": {
      "description": "Current brightness (0–100).",
      "type": "number",
    },
    "channel": {
      "description": "Current active channel name.",
      "type": "string",
    },
    "channelIndex": {
      "description": "Current active channel index.",
      "type": "number",
    },
    "clockId": {
      "description": "Current clock face ID.",
      "type": "number",
    },
    "screenOn": {
      "description": "Whether the display is on.",
      "type": "boolean",
    },
  },
  "required": [
    "brightness",
    "channel",
    "channelIndex",
    "screenOn",
    "clockId",
    "applied",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pixoo_push_image > inputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "description": "Push a single image to the Pixoo display.",
  "properties": {
    "fit": {
      "default": "contain",
      "description": "Resize mode: 'contain' (default, fit within bounds), 'cover' (fill and crop), 'fill' (stretch).",
      "enum": [
        "contain",
        "cover",
        "fill",
      ],
      "type": "string",
    },
    "kernel": {
      "default": "nearest",
      "description": "Resize interpolation: 'nearest' (default, pixel art), 'lanczos3' (photos), 'mitchell' (balanced).",
      "enum": [
        "nearest",
        "lanczos3",
        "mitchell",
      ],
      "type": "string",
    },
    "path": {
      "description": "Absolute path to image file (PNG, JPEG, WebP, GIF, AVIF, TIFF, SVG).",
      "minLength": 1,
      "type": "string",
    },
  },
  "required": [
    "path",
    "fit",
    "kernel",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pixoo_push_image > outputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "description": "Result after pushing image to device.",
  "properties": {
    "fit": {
      "description": "Resize mode used.",
      "type": "string",
    },
    "kernel": {
      "description": "Interpolation kernel used.",
      "type": "string",
    },
    "path": {
      "description": "Path of the image that was loaded.",
      "type": "string",
    },
    "size": {
      "description": "Display size in pixels.",
      "type": "number",
    },
  },
  "required": [
    "path",
    "size",
    "fit",
    "kernel",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pixoo_text > inputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "description": "Push scrolling text overlay to the Pixoo device.",
  "properties": {
    "align": {
      "default": "left",
      "description": "Text alignment ('left' | 'center' | 'right').",
      "enum": [
        "left",
        "center",
        "right",
      ],
      "type": "string",
    },
    "clear": {
      "default": false,
      "description": "If true, clears the text overlay at the given ID instead of setting it.",
      "type": "boolean",
    },
    "color": {
      "default": "white",
      "description": "Text color (hex '#RRGGBB' or named color).",
      "type": "string",
    },
    "direction": {
      "default": "left",
      "description": "Scroll direction ('left' | 'right').",
      "enum": [
        "left",
        "right",
      ],
      "type": "string",
    },
    "font": {
      "default": 0,
      "description": "Device font ID (0–114). Notable: 18 = arrow glyphs, 20 = °C/°F symbols.",
      "maximum": 114,
      "minimum": 0,
      "type": "integer",
    },
    "id": {
      "default": 0,
      "description": "Text overlay ID (0–19). Use different IDs to stack multiple overlays.",
      "maximum": 19,
      "minimum": 0,
      "type": "integer",
    },
    "speed": {
      "default": 50,
      "description": "Scroll speed (higher = faster).",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
    "text": {
      "description": "Text string to display.",
      "minLength": 1,
      "type": "string",
    },
    "width": {
      "description": "Scrolling area width in pixels. Defaults to display size.",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "x": {
      "default": 0,
      "description": "X position in pixels.",
      "maximum": 9007199254740991,
      "minimum": -9007199254740991,
      "type": "integer",
    },
    "y": {
      "default": 0,
      "description": "Y position in pixels.",
      "maximum": 9007199254740991,
      "minimum": -9007199254740991,
      "type": "integer",
    },
  },
  "required": [
    "text",
    "id",
    "x",
    "y",
    "direction",
    "font",
    "speed",
    "color",
    "align",
    "clear",
  ],
  "type": "object",
}
`;

exports[`Tool Schema Snapshots > Tool: pixoo_text > outputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "description": "Result of the text overlay operation.",
  "properties": {
    "action": {
      "description": "Whether text was set or cleared.",
      "enum": [
        "set",
        "cleared",
      ],
      "type": "string",
    },
    "id": {
      "description": "Text overlay slot used.",
      "type": "number",
    },
    "text": {
      "description": "Text that was displayed.",
      "type": "string",
    },
  },
  "required": [
    "id",
    "action",
  ],
  "type": "object",
}
`;
